# pneumonia-discharge-memory

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  shots.mjs  vite.config.ts
app/src/: App.svelte  app.css
docs/: ARCHITECTURE.md  CLINICAL_SAFETY.md  DEMO_SCRIPT.md  EMBER_LOOPS_IN_CODE.md  EMBER_LOOP_ENGINEERING.md  EMBER_SCREENS_AND_SERVICE_MAP.md  EMBER_USER_JOURNEY.md  EMBER_WORLD_BIBLE.md  FIELD_OPERATOR_MODEL.md  FINITE_STATE_MACHINE.md  HACKATHON_PLAYBOOK.md  INSTITUTIONAL_MEMORY.md  RESEARCH.md  RESEARCH_NOTES.md  ROADMAP.md  SOURCE_ALIGNMENT.md  TECHNICAL_WORK_SAMPLE.md  WHATIF_EMPATHY.md
docs/adr/: 0001-healthkit-role.md  0002-ingestion-api-and-cli.md  README.md
ember/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ember/cli/: README.md  ingest.mjs  ingest.test.mjs
ember/src/: App.svelte  app.css
examples/: README.md  pneumonia_case_001_homer1_proof.json  pneumonia_case_001_output.json
examples/memory/: institutional_memory.sample.jsonl
examples/patients/: pneumonia_case_001.json  pneumonia_case_002_low_risk.json  pneumonia_case_003_missing_data.json
src/pdm/: __init__.py  cli.py  datalake.py  evals.py  export.py  factory.py  insights.py  instruments.py  local_ai.py  memory.py  proof.py  prove_cli.py  (+5 more)
tests/: test_collector.py  test_factory_unit.py  test_homer1_acceptance.py  test_instruments_unit.py  test_runtime.py
web/: index.html
(+78 files in other folders)
