[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pneumonia-discharge-memory"
version = "0.1.0"
description = "HOMER-1-inspired pneumonia discharge readiness workflow with institutional memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jai Bhagat", email = "jai@chaiwithjai.com" }]
dependencies = ["pydantic>=2.7", "typer>=0.12", "rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
pdm-run = "pdm.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

